# 2024-NYCU-PP-Final

./: .gitmodules  README.md  mpi.sh  omp.sh  result.txt
NBodySim-main/: .gitignore  NBodySim.sln  README.md
NBodySim-main/NBodySim/: NBodySim.vcxproj  NBodySim.vcxproj.filters  camera.cpp  camera.h  main.cpp  nbody.h  nbody_cuda.cu  nbody_parallel.cpp  nbody_parallelsimd.cpp  nbody_parallelsimd2.cpp  nbody_serial.cpp  nbody_serialsimd.cpp  nbody_serialsimd2.cpp  opengl_context.cpp  opengl_context.h  option.h  point.cpp  point.h  utils.h
source/: CMakeLists.txt
source/src/: CMakeLists.txt  camera.cpp  main.cpp  main_without_opengl.cpp  nbody_cuda.cu  nbody_mpi.cpp  nbody_omp.cpp  nbody_serial.cpp  nbody_serial_backup.cpp  point.cpp
source/src/header/: camera.h  nbody.h  point.h
source/src/shaders/: fragmentShader.frag  vertexShader.vert
